crates/cli/src/tui/config/snapshots/sanic_review__tui__config__tests__a_config_reads_as_a_commented_file_with_what_it_does_below.snap
---
source: crates/cli/src/tui/config/tests.rs
expression: terminal.backend()
---
"┌ /home/u/.config/sanic-review/config.toml → /home/u/dotfiles/sanic.toml ──────────────────────────┐"
"│ # sanic-review config; the format is described in docs/DESIGN.md.                                │"
"│                                                                                                  │"
"│ [github]                                                                                         │"
"│ # GitHub's API, e.g. through a proxy; `serve` reads it only at startup                           │"
"│ # api_url = "https://api.github.com"                                                   (default) │"
"│ # where repo mirrors fetch from                                                                  │"
"│ # git_url = "https://github.com"                                                       (default) │"
"│                                                                                                  │"
"│ [poll]                                                                                           │"
"│ # seconds between the GraphQL searches that catch what notifications miss                        │"
"│ # reconcile_secs = 300                                                                 (default) │"
"│ # fewest seconds between notification polls; GitHub can ask for more                             │"
"│ # min_notification_secs = 60                                                           (default) │"
"│ # seconds a PR must go quiet before its review starts                                            │"
"│ # quiet_secs = 120                                                                     (default) │"
"│ # ignore PRs quiet for longer; 0 is no limit                                                     │"
"│ # updated_within_days = 14                                                             (default) │"
"│                                                                                                  │"
"│ [review_requests]                                                                                │"
"│ # which of your teams' requests count: the last glob that matches wins, `!` excludes             │"
"│ teams = [▸"*", "!sanic-hq/sanic-speedsters"]                                                     │"
"│ # your teams, and their review requests:                                                         │"
"│ #   sanic-hq/zone: 9 requests, counted                                                           │"
"│ #   sanic-hq/sanic-speedsters: 23 requests, left out by this filter                              │"
"│ # never review PRs with these titles automatically                                               │"
"│ skip_titles = ["build(deps)*"]  # dependabot                                                     │"
"│ # never review draft PRs automatically                                                           │"
"│ # skip_drafts = true                                                                   (default) │"
"│                                                                                                  │"
"│ [runner]                                                                                         │"
"│ # the `claude` executable; a bare name is looked up on PATH                                      │"
"│ What this config does ───────────────────────────────────────────────────────────────────────────│"
"│ · Watches 1,059 repos (1,057 in 2 orgs, 2 named directly)                                        │"
"│ · Matches up to 15 reviews in 1 repo (search can't apply your path globs or team filter)         │"
"│ · Matches up to 2 of your open PRs (search can't apply your path globs)                          │"
"│ · Only PRs updated in the last 14 days count                                                     │"
"│──────────────────────────────────────────────────────────────────────────────────────────────────│"
"│ ✓ loads                                ↵ edit  + add  - remove  u unset  f find  ^S save  ? keys │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
