crates/cli/src/tui/config/snapshots/sanic_review__tui__config__tests__counting.snap
---
source: crates/cli/src/tui/config/tests.rs
expression: draw(&editor).backend()
---
"┌ Config /home/u/.config/sanic-review/config.toml → /home/u/dotfiles/sanic.toml┐"
"│ github            │  [profile.ring]                                          │"
"│ poll              │                                            repos    PRs  │"
"│ review_requests   │  name          ring                                      │"
"│ runner            │  instructions  ‹default: none›                           │"
"│ profiles          │  skills        ‹default: none›                           │"
"│   ring            │  model         ‹runner.model: auto›                      │"
"│                   │  skip_titles   ‹default: none›                           │"
"│                   │  skip_drafts   ‹review_requests.skip_drafts: true›       │"
"│                   │  auto_fix      ‹default: false›                          │"
"│                   │  repos         { github = "org" }              …      …  │"
"│                   │                { github = "org/api", pat…      1      …  │"
"│                   │                                                          │"
"│                   │                                                          │"
"│                   │                                                          │"
"│                   │                                                          │"
"│                   │                                                          │"
"│                   │                                                          │"
"│                   │                                                          │"
"│ … repos · you owe …, in … repos · yours … · 14 days                counting… │"
"│ ≤: a search can't apply path globs or the team filter, so these can be fewer │"
"│ what this profile reviews; the most specific entry wins                      │"
"│ ✓ loads                    + add · - remove · f find · u unset · ^S save · ? │"
"└──────────────────────────────────────────────────────────────────────────────┘"
