crates/cli/src/tui/config/snapshots/sanic_review__tui__config__tests__discard.snap
---
source: crates/cli/src/tui/config/tests.rs
expression: draw(&editor).backend()
---
"┌ /home/u/.config/sanic-review/config.toml → /home/u/dotfiles/sanic. 1 unsaved ┐"
"│ # never review PRs with these titles automatically                           │"
"│ # skip_titles = []                                                 (default) │"
"│ # never review draft PRs automatically                                       │"
"│ # skip_drafts = true                                               (default) │"
"│                                                                              │"
"│ [runner]                                                                     │"
"│ # the `claude` executable; a bare name is looked up on PATH                  │"
"│ # claude = "claude"                                                (default) │"
"│ # agent runs at once, across all PRs                                         │"
"│ ┌ Discard? ────────────────────────────────────────────────────────────────┐ │"
"│ │ Discard 1 change unsaved?                                                │ │"
"│ │                                                                          │ │"
"│ │ y discard · any other key keeps editing                                  │ │"
"│ └──────────────────────────────────────────────────────────────────────────┘ │"
"│ # the review model; `auto` is your own Claude default                        │"
"│ # model = "auto"                                                   (default) │"
"│ # hold queued reviews until you start them                                   │"
"│ manual_reviews = false                                                       │"
"│ What this config does ───────────────────────────────────────────────────────│"
"│ Counting starts once the config loads.                                       │"
"│──────────────────────────────────────────────────────────────────────────────│"
"│ … checking         ↵ edit  + add  - remove  u unset  f find  ^S save  ? keys │"
"└──────────────────────────────────────────────────────────────────────────────┘"
